--- a/flutter_whisper/android/settings.gradle
+++ b/flutter_whisper/android/settings.gradle
@@ -1,2 +1,3 @@
 rootProject.name = 'flutter_whisper_android'
 include ':lib'
+project(':lib').projectDir = new File(settingsDir, '../../../whisper/whisper.cpp/examples/whisper.android/lib')
