--- a/flutter_whisper/android/build.gradle
+++ b/flutter_whisper/android/build.gradle
@@ -9,7 +9,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.3.0'
+        classpath 'com.android.tools.build:gradle:8.2.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
@@ -26,9 +26,9 @@ apply plugin: 'kotlin-android'
 
 android {
     defaultConfig {
-        compileSdk 31
+        compileSdk 34
     }
-
+    namespace 'com.wamynobe.flutterwhisper'
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -43,13 +43,13 @@ android {
     }
 
     defaultConfig {
-        minSdkVersion 21
+        minSdkVersion 26
     }
 }
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation files('/home/mason/flutter/bin/cache/artifacts/engine/android-x64/flutter.jar')
+//    implementation files('/home/mason/flutter/bin/cache/artifacts/engine/android-x64/flutter.jar')
     implementation 'com.android.support:support-annotations:28.0.0'
     implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.2'
