feat: init event handler for data streaming from native android

--- a/flutter_whisper/example/android/build.gradle
+++ b/flutter_whisper/example/android/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = '1.6.10'
+    ext.kotlin_version = '1.7.10'
     repositories {
         google()
         mavenCentral()
@@ -26,6 +26,8 @@ subprojects {
     project.evaluationDependsOn(':app')
 }
 
-task clean(type: Delete) {
+tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
+include ":lib"
+project(':lib').projectDir = new File(settingsDir, '../../whisper.android/lib')
