--- a/flutter_whisper/example/pubspec.yaml
+++ b/flutter_whisper/example/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
     # The example app is bundled with the plugin so we use a path dependency on
     # the parent directory to use the current plugin's version.
     path: ../
+  youtube_player_flutter: ^8.1.2
 
 dev_dependencies:
   flutter_driver:
